Made explicit mention that the software is MIT licensed

--- a/README
+++ b/README
@@ -9,8 +9,9 @@ All rights reserved.
 License information
 -------------------
 
-See the file "LICENSE" for information on the history of this software, terms &
-conditions for usage, and a DISCLAIMER OF ALL WARRANTIES.
+The OSI MIT License is used.  Please See the file "LICENSE" for information on
+the history of this software, terms & conditions for usage, and a DISCLAIMER OF
+ALL WARRANTIES.
 
 
 About
